[project]
name = "dh3d"
version = "0.1.0"
description = "Digital Holography for 3D Imaging"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "napari[all]>=0.7.0",
    "numpy>=2.3.5",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.26.0",
]
